vendor/impl-trait-for-tuples/tests/ui/empty_for_tuples.stderr
error: unexpected end of input, expected one of: `type`, `const`, parentheses, `#`, `where`
  --> $DIR/empty_for_tuples.rs:12:20
   |
12 |         for_tuples!()
   |                    ^^
